@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2012-2023 Rui Nuno Capela <rncbc@rncbc.org> -->
+<!-- Copyright 2012-2024 Rui Nuno Capela <rncbc@rncbc.org> -->
 <component type="desktop">
  <id>org.rncbc.drumkv1</id>
  <metadata_license>FSFAP</metadata_license>
